# Jsonable

./: Cargo.toml  README.md
crates/jsonable_macros/: Cargo.toml
crates/jsonable_macros/src/: enums.rs  lib.rs  structs.rs
crates/jsonable_types/: Cargo.toml
crates/jsonable_types/src/: lib.rs
examples/: enum_serialize.rs
src/: lib.rs
tests/ui/enum/: happy_path.rs  unimplemented.rs  unimplemented.stderr
tests/ui/named_structs/: happy_path.rs
tests/ui/tuple_structs/: unimplemented.rs  unimplemented.stderr
tests/ui/unit_structs/: happy_path.rs
