[package]
name = "jsonable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
jsonable_macros = { path = "crates/jsonable_macros" }
jsonable_types = { path = "crates/jsonable_types" }

[workspace]
members = ["crates/*"]