[package]
name = "jsonable"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/SamJBarney/jsonable"
keywords = ["json", "patch", "serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
jsonable_macros = { path = "crates/jsonable_macros", version = "1.0" }
jsonable_types = { path = "crates/jsonable_types", version = "1.0" }


[dev-dependencies]
json-patch = "0.3"
trybuild = "1.0"
serde = "1.0"

[workspace]
members = ["crates/*"]
