[package]
name = "jsonable_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonable_types = { path = "../jsonable_types" }
proc-macro2 = "1.0.36"
quote = "1.0.15"
serde_json = "1.0.79"
syn = "1.0.86"