[package]
name = "jsonable_macros"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/SamJBarney/jsonable"
keywords = ["json", "patch", "serde"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonable_types = { path = "../jsonable_types", version = "1.0" }
proc-macro2 = "1.0.36"
quote = "1.0.15"
serde_json = "1.0.79"
syn = "1.0.86"